--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -1,8 +1,11 @@
+{% load static from static %}
+
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <title>Articles</title>
+        <link rel="stylesheet" href="{% static 'styles.css' %}">
     </head>
     <body>
         <h1>Articles List</h1>
