--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -2,4 +2,7 @@
 
 {% block content %}
   <h1>Signup</h1>
+  <form class="site-form" action="/accounts/signup/", method="post"></form>
+  {{ form }}
+  <input type="submit" value="Signup">
 {% endblock %}
